--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "devDependencies": {
         "expansive": ">=0.7.0",
         "pak": ">=0.11.3"
+    },
+    "pak": {
+        "origin": "embedthis/exp-canon"
     }
 }
